--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -9,12 +16,12 @@ header {
     color: white;
     padding: 10px;
     text-align: center;
-    
+
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
 }
-    
+
 .home{
   background: rgb(0,0,0,0);
 }
@@ -67,11 +74,11 @@ section {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  
+
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
-  
+
 }
 .wrapper{
   position: fixed;
@@ -84,9 +91,9 @@ section {
   /*clip-path: circle(25px at calc(0% + 45px) 45px); */
   clip-path: circle(25px at calc(100% - 45px) 45px);
   transition: all 0.3s ease-in-out;
-  
-  
-  
+
+
+
 }
 #active:checked ~ .wrapper{
   clip-path: circle(75%);
@@ -107,12 +114,12 @@ section {
   cursor: pointer;
   /*background: linear-gradient(-135deg, #113964, #364bb4);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- 
+
   background-repeat: no-repeat;
   transition: all 0.3s ease-in-out;
 }
 #active:checked ~ .menu-btn{
-  
+
   color:white;
 }
 #active:checked ~ .menu-btn i:before{
@@ -126,11 +133,11 @@ section {
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
-  
+
 }
 .wrapper ul li{
   margin: 15px 0;
- 
+
 }
 .wrapper ul li a{
   color: none;
@@ -143,13 +150,13 @@ section {
   line-height: 50px;
   margin-right: 20px;
   transition: all 0.3s ease;
-  
- 
+
+
 }
 .wrapper ul li a:after{
   position: absolute;
   content: "";
-  
+
   width: 100%;
   height: 50px;
   left: 0;
@@ -158,17 +165,17 @@ section {
   margin-right: 20px;
   z-index: -1;
   transition: transform 0.3s ease;
-  
+
 }
 .wrapper ul li a:hover:after{
   transform: scaleY(1);
- 
+
   background:#ff96ad;
   box-shadow:0 0 5px #ff96ad, 0 0 25px #ff96ad, 0 0 50px #ff96ad, 0 0 200px #ff96ad;
 }
 .wrapper ul li a:hover{
-  
- 
+
+
 }
 input[type="checkbox"]{
   display: none;
@@ -187,7 +194,7 @@ input[type="checkbox"]{
   font-size: 80px;
   font-weight: 700;
   color: azure;
-  
+
 }
 .content p{
   font-size: 35px;
@@ -210,13 +217,19 @@ input[type="checkbox"]{
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
-  z-index:-1;
+  z-index: -1;
 }
 
+@media (min-aspect-ratio:16/9){
+  #myVideo{
+    width:100%;
+    height:auto;
+  }
+}
 
-
-
-
-
-
-
+@media (max-aspect-ratio:16/9){
+  #myVideo{
+    width:auto;
+    height:100%;
+  }
+}
