--- a/style.css
+++ b/style.css
@@ -215,8 +215,9 @@ input[type="checkbox"]{
   position: absolute;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  top:0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
 }
 
