--- a/style.css
+++ b/style.css
@@ -215,10 +215,11 @@ input[type="checkbox"]{
   position: absolute;
   right: 0;
   bottom: 0;
+    top:0;
   object-fit:fill;
 
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   z-index: -1;
 }
 
